--- a/NodumVisualCalculator/Components/ValueNodeComponent.razor
+++ b/NodumVisualCalculator/Components/ValueNodeComponent.razor
@@ -3,7 +3,7 @@
 
 @if (VisualNode != null)
 {
-    if (VisualNode.Node is IValueNode<double> doubleValueNode)
+    if (VisualNode.Node is IValueNode valueNode)
     {
         <div class="node">
             @if (VisualNode.InputNodePins.Count > 1)
@@ -11,7 +11,7 @@
                 for (int i = 0; i < VisualNode.InputNodePins.Count; i++)
                 {
                     int index = i;
-                    if (VisualNode.InputNodePins[index].Showed)
+                    if (VisualNode.GetInputNodePin(index).Showed)
                     {
                         <div class="node-element">
                             <div class="node-element-content" @onclick="@(args => OnNodePinConnect(args, VisualNode, index))">
@@ -29,7 +29,7 @@
             <div class="node-element">
                 @if (VisualNode.InputNodePins.Count == 1)
                 {
-                    if (VisualNode.InputNodePins[0].Showed)
+                    if (VisualNode.GetInputNodePin().Showed)
                     {
                         <div class="node-element-content" @onclick="@(args => OnNodePinConnect(args, VisualNode, 0))">
                             <span id="@VisualNode.InputNodePins[0].ElementId" class="iconify iconify-inputpin" data-icon="mdi:circle" data-inline="false"></span>
@@ -38,7 +38,24 @@
                 }
                 <div class="node-element-content input-container">
                     <label>@VisualNode.Name</label>
-                    <input type="number" @bind-value="doubleValueNode.Value" />
+                    @if (valueNode is IValueNode<double> doubleValueNode)
+                    {
+                        <input type="number" @bind-value="doubleValueNode.Value" />
+                    }
+                    else if (valueNode is IValueNode<int> intValueNode)
+                    {
+                        <input type="number" @bind-value="intValueNode.Value" />
+                    }
+                    else if (valueNode is IValueNode<float> floatValueNode)
+                    {
+                        <input type="number" @bind-value="floatValueNode.Value" />
+                    }
+                    else if (valueNode is IValueNode<string> stringValueNode)
+                    {
+                        <input type="text" @bind-value="stringValueNode.Value" />
+                    }
+
+
                 </div>
                 @if (VisualNode.OutputNodePin.Showed)
                 {
