--- a/NodumVisualCalculator/wwwroot/css/site.css
+++ b/NodumVisualCalculator/wwwroot/css/site.css
@@ -64,7 +64,8 @@ body {
 }
 
 .main-node-header {
-    position: fixed;
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -185,3 +186,33 @@ body {
             outline: none;
             border-bottom: 1px solid #e74c3c;
         }
+
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    position: absolute;
+    background-color: #424242;
+    min-width: 250px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    z-index: 2;
+}
+
+/* Links inside the dropdown */
+.dropdown-content-element {
+    cursor: pointer;
+    color: #fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content-element:hover {
+        background-color: #363636;
+    }
