--- a/NodumVisualCalculator/Pages/_Host.cshtml
+++ b/NodumVisualCalculator/Pages/_Host.cshtml
@@ -24,7 +24,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 
-    <script src="/DraggableWindows.js"></script>
+    <script src="/VisualCalculator.js"></script>
     <link rel="stylesheet" href="_content/BlazorDraggableWindow/styles.css">
 </body>
 </html>
