Removed Line from NodePinConnection

--- a/NodumVisualCalculator/Components/MainNodeComponent.razor
+++ b/NodumVisualCalculator/Components/MainNodeComponent.razor
@@ -39,7 +39,7 @@
                         <stop offset="100%" style="stop-color: red; stop-opacity: 1" />
                     </linearGradient>
                 </defs>
-                <path id="@($"{connection.FromPin.OutputElementId}+{connection.ToPin.InputElementId}")" class="node-line" fill="none" stroke="url(#grad1)" stroke-width="8" d="@connection.Line.Curve" />
+                <path id="@($"{connection.FromPin.OutputElementId}+{connection.ToPin.InputElementId}")" class="node-line" fill="none" stroke="url(#grad1)" stroke-width="8" d="M 0, 0" />
             </svg>
         }
 
